[package]
name = "orbital-necropolis"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "=0.16.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Fast iterative builds, optimized deps (Bevy is unusably slow at opt-level 0)
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
